GNOME Bugzilla – Bug 694704
small fix for finding app icons
Last modified: 2013-02-28 17:42:08 UTC
I noticed we don't always find shortcut icons for some sites.
Created attachment 237390 [details] [review] Try more shortcut icon names
Review of attachment 237390 [details] [review]: Wouldn't a regexp be more suitable than trying all combinations of 'shortcut' and 'icon' exhaustively?
Review of attachment 237390 [details] [review]: Ok, although Reinouts makes a good point.