Try more shortcut icon names

https://bugzilla.gnome.org/show_bug.cgi?id=694704